# faker

./: Makefile  build.yml  meson.build  run.sh
include/: sigmod.hh
include/sigmod/: config.hh  database.hh  debug.hh  flags.hh  memory.hh  metrics.hh  query.hh  query_set.hh  random.hh  record.hh  scoreboard.hh  seek.hh
src/: main.cc
src/sigmod/: database.cc  query_set.cc
